added Sphinx to python

--- a/default.config.yml
+++ b/default.config.yml
@@ -150,6 +150,8 @@ pip_packages:
   state: present
 - name: gmail
   state: present
+- name: Sphinx
+  state: present
 
 # Set to 'true' to configure Sublime Text.
 configure_sublime: false
