--- a/default.config.yml
+++ b/default.config.yml
@@ -139,6 +139,11 @@ osx_script: "~/.osx --no-restart"
 # Install packages from other package managers.
 # Note: You are responsible for making sure the required package managers are
 # installed, eg. through homebrew.
+cargo_packages:
+  - name: exa
+    state: present
+  - name: irust
+    state: present
 composer_packages: []
 # - name: drush
 #   state: present # present/absent, default: present
