added instructor (works with pydantic and OpenAI function calling

--- a/default.config.yml
+++ b/default.config.yml
@@ -191,6 +191,8 @@ pip_packages:
     state: latest
   - name: pydantic
     state: latest
+  - name: instructor
+    state: latest
 
 cargo_packages:
   - name: rustup
