--- a/default.config.yml
+++ b/default.config.yml
@@ -202,6 +202,9 @@ pip_packages:
     state: latest
   - name: tweepy
     state: latest
+  - name: ollama
+    state: latest
+
 cargo_packages: []
   #  - name: rustup
   #  state: latest
