Add vidgrabber script and fabric integration
- Add existing vidgrabber script with fabric support
- Create git-repos task for managing repositories
- Add fabric repository to configuration
- Update main playbook to include git-repos task

--- a/default.config.yml
+++ b/default.config.yml
@@ -8,6 +8,12 @@ configure_osx: true
 # Windsurf configuration
 windsurf_download_url: "https://github.com/codeium/windsurf/releases/latest/download/Windsurf.dmg"
 
+# Git repositories to clone
+git_repositories:
+  - name: fabric
+    repo: https://github.com/danielmiessler/fabric.git
+    version: main
+
 # Set to 'true' to configure the Dock via dockutil.
 configure_dock: true
 dockitems_remove:
