--- a/main.yml
+++ b/main.yml
@@ -49,6 +49,9 @@
     - import_tasks: tasks/manual-apps.yml
       tags: ['manual-apps']
 
+    - import_tasks: tasks/desktop.yml
+      tags: ['desktop']
+
     - import_tasks: tasks/git-repos.yml
       tags: ['git-repos']
 
