--- a/main.yml
+++ b/main.yml
@@ -49,14 +49,8 @@
     - import_tasks: tasks/manual-apps.yml
       tags: ['manual-apps']
 
-    - import_tasks: tasks/desktop.yml
-      tags: ['desktop']
-
-    - import_tasks: tasks/git-repos.yml
-      tags: ['git-repos']
-
-    - import_tasks: tasks/user-scripts.yml
-      tags: ['scripts']
+    - import_tasks: tasks/windsurf-install.yml
+      tags: ['windsurf']
 
     - name: Run post-provision task files in a block.
       tags: ['post']
